--- a/tabor.html
+++ b/tabor.html
@@ -42,7 +42,10 @@
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor</h2>
             <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.  
-                Fotky z minulých ročníků najdete zde: https://jkvydlakov.rajce.idnes.cz/</p>
+                
+                Fotky z minulých ročníků najdete zde: https://jkvydlakov.rajce.idnes.cz/
+            
+            </p>
             <p class="section__text">Tábory jsou určeny pro děti od 6 do 15 let, které mají rády koně a chtějí se o ně
                 naučit starat</p>
         </section>
@@ -51,7 +54,7 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech (pondělí až pátek),</li>
                 <li class="list_tabor__item">každý den začíná v 8:00 a končí v 16:00 v areálu naší stáje
-                    Adresa: Pod Strání 131, Stráž nad Nisou<,
+                    Adresa: Pod Strání 131, Stráž nad Nisou,
                 <li class="list_tabor__item">během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
