--- a/kone.html
+++ b/kone.html
@@ -384,6 +384,23 @@
                             src="./imgs/Marcus_3_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
+                 <div class="section_cards__card card">
+                    <div class="card_top">
+                        <p class="card_top__jmeno">Tullamore Great</p>
+                        <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
+                                narození:</span> 21.4.2009</p>
+                        <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
+                            Velšský pony</p>
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 1463
+                            TOPAS 1</p>
+                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> 53/748
+                            Gipsy</p>
+                    </div>
+                    <figure class="img_kone__wrapper">
+                        <img alt="Fotografie grošáka Dambara, má světlejší nohy a tmavší hřívu"
+                            src="./akce_foto/IMG_20240618_143754.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                    </figure>
+                </div>
             </div>
 
         </section>
