--- a/kone.html
+++ b/kone.html
@@ -391,9 +391,9 @@
                                 narození:</span> 21.4.2009</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
                             Velšský pony</p>
-                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 1463
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span>
                             TOPAS 1</p>
-                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> 53/748
+                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span>
                             Gipsy</p>
                     </div>
                     <figure class="img_kone__wrapper">
