--- a/2024.html
+++ b/2024.html
@@ -81,12 +81,18 @@ Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na 
                                 <img src="./akce_foto/2024_detskyden5.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
-                            </figure><figure class="img_container__part">
+                            </figure>
+                        <figure class="img_container__part">
                                 <img src="./akce_foto/2024_detskyden6.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure><figure class="img_container__part">
                                 <img src="./akce_foto/2024_detskyden7.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/IMG_20240618_143754.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
