--- a/2023.html
+++ b/2023.html
@@ -104,6 +104,11 @@
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
+                        <figure class="img_container__part">
+                            <img src="./akce_foto/2023_hnanice lord.jpeg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
                       
                     </div>
             </article>
