--- a/2022.html
+++ b/2022.html
@@ -86,6 +86,11 @@
                     </p>
                     <p class="article_news__text">Tyto závody jsme jeli v sestavě: Majda, Jana a Kipp, Klárka a Lord,
                         Šarlotka a Rocky, Natálka a Silver, Barča a Bianka a Tínka s Devronem.</p>
+                     <figure class="img_container__part img_container__part--sirka">
+                            <img src="./akce_foto/2024_pony.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
 
                 </article>
                 <article class="section_year__article article_news">
