--- a/tabor.html
+++ b/tabor.html
@@ -42,6 +42,8 @@
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor</h2>
             <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.</p>  
+            <h3 class="section__heading section__heading--red">Začátek prvního letošního turnusu už se blíží!</h3>
+            <p class="section__text">Podrobné informace i fotografie právě probíhajících turnusů najdete zde. </p>
             <p class="section__text">Fotky z minulých ročníků najdete zde:</p> 
                 <a class="prize_button prize_button--center">https://jkvydlakov.rajce.idnes.cz/</a>
             
