--- a/tabor.html
+++ b/tabor.html
@@ -44,7 +44,7 @@
             <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.</p>  
             <h3 class="section__heading section__heading--red">Začátek prvního letošního turnusu už se blíží!</h3>
             <p class="section__text">Podrobné informace i fotografie právě probíhajících turnusů najdete zde. </p>
-              <div class="year_box">
+              <div class="year_box year_box--width">
                 <a href="2023.html#2023" class="year_box__text">Tábory 2024</a>
             </div>
             <p class="section__text">Fotky z minulých ročníků najdete zde:</p> 
