--- a/tabor.html
+++ b/tabor.html
@@ -58,9 +58,9 @@
             <h3 class="section__heading section__heading--red">Základní informace:</h3>
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech (pondělí až pátek),</li>
-                <li class="list_tabor__item">každý den začíná v 8:00 a končí v 16:00 v areálu naší stáje
-                    Adresa: Pod Strání 131, Stráž nad Nisou,
-                <li class="list_tabor__item">během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
+                <li class="list_tabor__item">každý den začíná v 8:00 a končí v 16:00 v areálu naší stáje.
+                    Adresa: Pod Strání 131, Stráž nad Nisou, mapka je v úvodu.
+                <li class="list_tabor__item">Během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
                     8 míst),</li>
@@ -102,10 +102,10 @@
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Turnusy 2024:</h3>
             <ol class="section__list list_tabor order_list" start="">
-                <li class="order_list__item list_tabor__item">1.7 - 5.7.</li>
-                <li class="order_list__item list_tabor__item">8.7 - 12.7.</li>
-                <li class="order_list__item list_tabor__item">15.7 - 19.7.</li>
-                <li class="order_list__item list_tabor__item">22.7 - 26.7.</li>
+                <li class="order_list__item list_tabor__item">1.7. - 5.7.</li>
+                <li class="order_list__item list_tabor__item">8.7. - 12.7.</li>
+                <li class="order_list__item list_tabor__item">15.7. - 19.7.</li>
+                <li class="order_list__item list_tabor__item">22.7. - 26.7.</li>
                 <li class="order_list__item list_tabor__item">5.8 - 9.8.</li>
             </ol>
         </section>
