--- a/tabor.html
+++ b/tabor.html
@@ -52,7 +52,7 @@
             
             
             <p class="section__text">Tábory jsou určeny pro děti od 6 do 15 let, které mají rády koně a chtějí se o ně
-                naučit starat</p>
+                naučit starat.</p>
         </section>
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Základní informace:</h3>
