--- a/tabory2024.html
+++ b/tabory2024.html
@@ -41,7 +41,7 @@
             </div>
         </header>
 
-    <main id="akce" class="main main_akce">
+    <main id="tabory2024" class="main main_akce">
         <h2 class="main__heading main_akce__heading ">Tábory 2024</h2>
         <section id="2021" class="section_year">
             <h3 class="section_year__heading">2024</h3>
