--- a/kone.html
+++ b/kone.html
@@ -171,7 +171,7 @@
                             </p>
                 </div>
                          <figure class="img_kone__wrapper">
-                        <img alt="Fotagrafie ryzáka Greenhorna, který je stažený z dostihů, má krásnou lisinku, která mu končí na čumáku"
+                        <img alt="Fotagrafie tmavé hnědky Aquy stojící na jízdárně"
                             src="./imgs/2024_Aqua.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 <div class="section_cards__card card">
