--- a/kone.html
+++ b/kone.html
@@ -151,29 +151,27 @@
                         <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> Regresa
                             A mi</p>
                     </div>
-                    
-                    </div>
                     <figure class="img_kone__wrapper">
                         <img alt="Fotagrafie ryzáka Greenhorna, který je stažený z dostihů, má krásnou lisinku, která mu končí na čumáku"
                             src="./imgs/Green_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
-                         </div>
+                    </div>
+                    
                     <div class="section_cards__card card">
-                    <div class="card_top">
+                        <div class="card_top">
                         <p class="card_top__jmeno">Aquabella</p>
                         <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
                                 narození:</span> 23.4.2021</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
                             Český teplokrevník</p>
-                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 2854 Grand Step Koláček
-    </p>
-                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> 90/113 Anabeth
-                            </p>
-                </div>
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 2854 Grand Step Koláček</p>
+                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> 90/113 Anabeth</p>
+                        </div>
                          <figure class="img_kone__wrapper">
                         <img alt="Fotagrafie tmavé hnědky Aquy stojící na jízdárně"
                             src="./imgs/2024_Aqua.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
+                        </div>
                 <div class="section_cards__card card">
                     <div class="card_top">
                         <p class="card_top__jmeno">Bobeš</p>
