--- a/kone.html
+++ b/kone.html
@@ -169,7 +169,7 @@
                         </div>
                          <figure class="img_kone__wrapper">
                         <img alt="Fotagrafie tmavé hnědky Aquy stojící na jízdárně"
-                            src="./imgs/2024_Aqua.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                            src="./akce_foto/2024_Aqua.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                         </div>
                 <div class="section_cards__card card">
