--- a/kone.html
+++ b/kone.html
@@ -145,7 +145,7 @@
                         <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
                                 narození:</span> 11.3.2012</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
-                            Anglický teplokrevník</p>
+                            Anglický plnokrevník</p>
                         <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> Ruler Of
                             The World</p>
                         <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> Regresa
