--- a/tabory2024.html
+++ b/tabory2024.html
@@ -47,7 +47,19 @@
             <h3 class="section_year__heading">2024</h3>
             <div class="section_article__wrapper">
                 <article class="section_year__article article_news">
-                    <h4 class="article_news__heading">1. turnus</h4>
+                    <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
+                    <p class="article_news__text">Lorem ipsum dolor</p>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
+                    <p class="article_news__text">Lorem ipsum dolor</p>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 22.7. - 26.7.</h4>
+                    <p class="article_news__text">Lorem ipsum dolor</p>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Tábor - 5.8. - 9.8.</h4>
                     <p class="article_news__text">Lorem ipsum dolor</p>
                 </article>
             </div>
