--- a/tabor.html
+++ b/tabor.html
@@ -48,7 +48,7 @@
                 <a href="./tabory2024.html#tabory2024" class="year_box__text">Tábory 2024</a>
             </div>
             <p class="section__text">Fotky z minulých ročníků najdete zde:</p> 
-                <a class="prize_button prize_button--center">https://jkvydlakov.rajce.idnes.cz/</a>
+                <a href="https://jkvydlakov.rajce.idnes.cz/" class="prize_button prize_button--center">Více fotek zde!</a>
             
             
             <p class="section__text">Tábory jsou určeny pro děti od 6 do 15 let, které mají rády koně a chtějí se o ně
