--- a/2024.html
+++ b/2024.html
@@ -57,7 +57,7 @@ Sešli jsme se ve stáji už ráno, nejdříve proběhl dokonalý úklid, pak or
 Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na podzim potkáme zase.</p>
                         
                          <p class="article_news__text">Za fotky děkujeme Kátě H. ( kackahartlova@seznam.cz ) </p>
-                        <a href="https://eu.zonerama.com/…tes/" class="prize_button prize_button--center">Fotky naleznete zde!</a>
+                        <a href="https://eu.zonerama.com/…tes" class="prize_button prize_button--center">Fotky naleznete zde!</a>
                     <div class="img_container article_news__imgs">
                         <figure class="img_container__part">
                                 <img src="./akce_foto/2024_detskyden1.JPG"
