--- a/tabory2024.html
+++ b/tabory2024.html
@@ -54,14 +54,17 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
                     <p class="article_news__text">Lorem ipsum dolor</p>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685844" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 22.7. - 26.7.</h4>
                     <p class="article_news__text">Lorem ipsum dolor</p>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685850" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 5.8. - 9.8.</h4>
                     <p class="article_news__text">Lorem ipsum dolor</p>
+                    <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685858" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
             </div>
         </section>
