--- a/tabory2024.html
+++ b/tabory2024.html
@@ -45,6 +45,7 @@
         <h2 class="main__heading main_akce__heading ">Tábory 2024</h2>
         <section id="2021" class="section_year">
             <h3 class="section_year__heading">2024</h3>
+             <p class="section_year__text">Těšíme se na vás!</p>
             <div class="section_article__wrapper">
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
