--- a/sluzby.html
+++ b/sluzby.html
@@ -81,7 +81,7 @@
                         <div class="swiper-pagination"></div>
                     </div>
                     <p class="ustajeni__text_other">Cena nezahrnuje veterinární a podkovářské práce.</p>
-                    <p class="ustajeni__text ustajeni__text--bold">Více informací na dotazu správce jízdárny.</p>
+                    <p class="ustajeni__text ustajeni__text--bold">Více informací Vám poskytne správce jízdárny.</p>
                 </div>
             </section>
             <section id="clenstvi" class="section section_clenstvi">
