--- a/tabory2024.html
+++ b/tabory2024.html
@@ -49,7 +49,7 @@
             <div class="section_article__wrapper">
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
-                    <p class="article_news__text">Lorem ipsum dolor</p>
+                    <p class="article_news__text">Zítra to vypukne!! Bude nás 13 holek a starat se o nás budou Tína a Eliška. </p>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685830" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
