--- a/tabory2024.html
+++ b/tabory2024.html
@@ -50,10 +50,11 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
                     <p class="article_news__text">Zítra to vypukne!! Bude nás 13 holek a starat se o nás budou Tína a Eliška. </p>
-                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie rezavé kobylky Bianky" src="./imgs/Bianca_2_S.jpg"
-                            onclick="this.classList.toggle('workingImage'); openImg();" />
-                    </figure>
+                   <figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden1.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685830" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
