--- a/tabory2024.html
+++ b/tabory2024.html
@@ -49,7 +49,7 @@
             <div class="section_article__wrapper">
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
-                    <p class="article_news__text">Zítra to vypukne!! Bude nás 13 holek a starat se o nás budou Tína a Eliška. </p>
+                    <p class="article_news__text">Zítra to vypukne!! Bude nás 13 holek a starat se o nás budou Tína, Lucka a Eliška. </p>
                    <figure class="img_container__part">
                                 <img src="./akce_foto/2024_detskyden1.JPG"
                                     alt=""
