--- a/tabory2024.html
+++ b/tabory2024.html
@@ -50,6 +50,9 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 8.7. - 12.7.</h4>
                     <p class="article_news__text">Zítra to vypukne!! Bude nás 13 holek a starat se o nás budou Tína, Lucka a Eliška. </p>
+                     <p class="article_news__text">Náš tábor nás provedeme nejznámějšími odvětvími jezdeckého sportu. V pondělí jsme začaly voltiží, zkoušely jsme si cviky a i samostatně lonžovat jiné holky. V úterý jsme 
+                                                na jízdárně pilovaly drezuru a 
+                                                v dalších dnech nás čekají parkury, dostihy a parajezdectví. K tomu všelijaké hry a ošetřování koní, i nezbytná práce okolo nich. </p>
                    <figure class="img_container__part">
                                 <img src="./akce_foto/IMG_20240708_081900.jpg"
                                     alt=""
