--- a/tabory2024.html
+++ b/tabory2024.html
@@ -65,6 +65,11 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
                     <p class="article_news__text">Náš turnus začal za letních veder a trochu tajemně.... zatím sbíráme body a vše se budeme dozvídat postupně. Naše průvodkyně jsou Krista s Verčou a je nás 8 holek. </p>
+                      <figure class="img_container__part">
+                                <img src="./akce_foto/2024_tabor druhy turnus.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685844" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
