--- a/tabory2024.html
+++ b/tabory2024.html
@@ -54,22 +54,25 @@
                                                  V úterý jsme na jízdárně pilovaly drezuru a 
                                                  v dalších dnech nás čekají parkury, dostihy a parajezdectví. K tomu každý den všelijaké hry a ošetřování koní, i nezbytná práce okolo nich. </p>
                                                
-                                              
-                 <figure class="img_container__part">
+                <div class="img_container article_news__imgs">                             
+                <figure class="img_container__part">
                                 <img src="./akce_foto/IMG_20240708_081900.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                </div>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685830" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
                     <p class="article_news__text">Náš turnus začal za letních veder a trochu tajemně.... zatím sbíráme body a vše se budeme dozvídat postupně. Naše průvodkyně jsou Krista s Verčou a je nás 8 holek. </p>
-                      <figure class="img_container__part">
+                    <div class="img_container article_news__imgs">  
+                        <figure class="img_container__part">
                                 <img src="./akce_foto/2024_tabor druhy turnus.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
-                            </figure>
+                        </figure>
+                    </div>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685844" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
