--- a/tabory2024.html
+++ b/tabory2024.html
@@ -79,7 +79,8 @@
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 22.7. - 26.7.</h4>
-                    <p class="article_news__text">Lorem ipsum dolor</p>
+                    <p class="article_news__text">Znáte deskovou hru Z pohádky do pohádky? Tou se inspiruje tento turnus s Krisou a Rózou. Bude nás 6 holek a 1 kluk a cílem tábora bude
+                    dostat se z pohádek ven. </p>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685850" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
                 <article class="section_year__article article_news">
