--- a/tabory2024.html
+++ b/tabory2024.html
@@ -54,7 +54,7 @@
                                                  V úterý jsme na jízdárně pilovaly drezuru a 
                                                  v dalších dnech nás čekají parkury, dostihy a parajezdectví. K tomu každý den všelijaké hry a ošetřování koní, i nezbytná práce okolo nich. </p>
                                                
-                <div class="img_container article_news__imgs">                             
+                <div class="img_container img_container--center article_news__imgs">                             
                 <figure class="img_container__part">
                                 <img src="./akce_foto/IMG_20240708_081900.jpg"
                                     alt=""
@@ -66,7 +66,7 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
                     <p class="article_news__text">Náš turnus začal za letních veder a trochu tajemně.... zatím sbíráme body a vše se budeme dozvídat postupně. Naše průvodkyně jsou Krista s Verčou a je nás 8 holek. </p>
-                    <div class="img_container article_news__imgs">  
+                    <div class="img_container img_container--center article_news__imgs">  
                         <figure class="img_container__part">
                                 <img src="./akce_foto/2024_tabor druhy turnus.jpg"
                                     alt=""
