--- a/tabory2024.html
+++ b/tabory2024.html
@@ -68,7 +68,7 @@
                     <p class="article_news__text">Náš turnus začal za letních veder a trochu tajemně.... zatím sbíráme body a vše se budeme dozvídat postupně. Naše průvodkyně jsou Krista s Verčou a je nás 8 holek. 
                         V pátek ráno jsme si užily na koních Zorro, Karola, Saul a Greenhorn první parkur v životě. Potom jsme šly hledat poklad a našly jsme spoustu sladkostí, dárečků a hlavně naši společnou fotku 
                         na památku.  </p>
-                    <div class="img_container article_news__imgs">  
+                    <div class="img_container img_container--center article_news__imgs">  
                         <figure class="img_container__part">
                                 <img src="./akce_foto/2024_tabor druhy turnus.jpg"
                                     alt=""
