--- a/tabory2024.html
+++ b/tabory2024.html
@@ -66,7 +66,7 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 15.7. - 19.7.</h4>
                     <p class="article_news__text">Náš turnus začal za letních veder a trochu tajemně.... zatím sbíráme body a vše se budeme dozvídat postupně. Naše průvodkyně jsou Krista s Verčou a je nás 8 holek. 
-                        V pátek ráno jsme si užily na koních Zorro, Karola, Saul a Greenhorn první parkur v životě. Potom jsme šly hledat poklad a našly jsme spoustu sladkostí, dárečků a hlavně naši společnou fotku 
+                         <p class="article_news__text"> V pátek ráno jsme si užily na koních Zorro, Karola, Saul a Greenhorn první parkur v životě. Potom jsme šly hledat poklad a našly jsme spoustu sladkostí, dárečků a hlavně naši společnou fotku 
                         na památku.  </p>
                     <div class="img_container img_container--center article_news__imgs">  
                         <figure class="img_container__part">
@@ -79,7 +79,7 @@
                 </article>
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 22.7. - 26.7.</h4>
-                    <p class="article_news__text">Znáte deskovou hru Z pohádky do pohádky? Tou se inspiruje tento turnus s Krisou a Rózou. Bude nás 6 holek a 1 kluk a cílem tábora bude
+                    <p class="article_news__text">Znáte deskovou hru Z pohádky do pohádky? Tou se inspiruje tento turnus s Kristou a Rózou. Bude nás 6 holek a 1 kluk a cílem tábora bude
                     dostat se z pohádek ven. </p>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685850" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
