--- a/tabory2024.html
+++ b/tabory2024.html
@@ -81,6 +81,8 @@
                     <h4 class="article_news__heading">Tábor - 22.7. - 26.7.</h4>
                     <p class="article_news__text">Znáte deskovou hru Z pohádky do pohádky? Tou se inspiruje tento turnus s Kristou a Rózou. Bude nás 6 holek a 1 kluk a cílem tábora bude
                     dostat se z pohádek ven. </p>
+                     <p class="article_news__text">Nejdříve jsme vytvořili dva týmy - Šrádi a Koňský vydličky (ano, čtete dobře, vydličky). Plnili jsme spoustu úkolů, zdobili koně, kydali boxy, skákali parkur a za ně dostávali body.
+                     Prošli jsme celou pohádkou a vítězem se stal tým Šrádi.</p>
                      <div class="img_container img_container--center article_news__imgs">                             
                 <figure class="img_container__part">
                                 <img src="./akce_foto/2024tabor3turnus.jpg"
