--- a/tabory2024.html
+++ b/tabory2024.html
@@ -95,7 +95,11 @@
                 <article class="section_year__article article_news">
                     <h4 class="article_news__heading">Tábor - 5.8. - 9.8.</h4>
                      <p class="article_news__text">Zítra nás čeká poslední letošní turnus!! Bude nás 5 holek a starat se o nás bude Tína. Naším úkolem bude splnit spoustu úkolů a pomocníkem nám bude speciální mapa. </p>
-                    
+                     <figure class="img_container__part">
+                                <img src="./akce_foto/2024_tabor4titulka.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
                     <a href="https://eu.zonerama.com/JSVydlakovakce/Album/11685858" class="prize_button prize_button--center">Všechny fotky</a>
                 </article>
             </div>
