--- a/2024.html
+++ b/2024.html
@@ -47,6 +47,14 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2024</h3>
 
+                 <h4 class="article_news__heading">Drezurní závody v Sobotce 31.8. 2024</h4>
+                    <p class="article_news__text">V sobotu 31.8.2024 jsme zavítali do Sobotky na drezurní závody, které pro nás byly i přípravou na ZZVJ. Na Devronovi startovala Majda s Verčou, o Saula se podělily Klárka s Johankou P. Lucka jela na Tedovi. 
+                        Organizace byla velmi dobrá, to ostatně v Sobotce je vždycky. 
+                        Úlohu děvčata odjela v rozpětí 73% - 46%, nejlepší z nás byla Lucka, která celou soutěž s přehledem vyhrála, ze 6. místa se radovala Klárka, dále se holky seřadily na 9., 11. a 12. místě. .</p>
+                        
+                         <p class="article_news__text">Pro tuhle partu holek to byly první drezurní závody v životě. Nabyly nové cenné zkušenosti, za které vděčí své trenérce Martině. 
+                        Vyposlechly si i zhodnocení hlavního rozhodčího pana Tvarůžka. Za rady a připomínky doma v tréninku a na závodech děkujeme i trenérce Olině.</p>
+
                 
                 <article id="detskyden2024" class="section_year__article article_news">
                     <h4 class="article_news__heading">Dětský den 8.6.2024</h4>
