--- a/2024.html
+++ b/2024.html
@@ -47,8 +47,24 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2024</h3>
 
+                <h4 class="article_news__heading">Zkoušky základního výcviku jezdce v Sobotce 1.9.2024</h4>
+                  <p class="article_news__text">Po několika letech se několik členek naší stáje opět objevilo na soupise účastníků ZZVJ /zkoušky základního výcviku jezdce/. 
+                      Termínem zkoušky byl poslední den prázdnin neděle 1.9. a místem konání naše oblíbená Sobotka. Sešlo se celkem 18 účastníků.
+                       Ke zkouškám nakonec nastoupily Verča a Majda s Devronem a Lucka s Tedem. .</p>
+                  <p class="article_news__text">ZZVJ je tvořena několika etapami. První je předvádění koně, kdy zkoušející komisař klade důraz zejména na předvedení v dynamickém klusu.  
+                       Druhou etapou je vědomostní test spojený s popisem koně. Třetí etapou je drezura, kdy se účastníci snaží o co nejpreciznější zajetí drezurní úlohy, kterou pro účely ZZVJ schválila ČJF. 
+                      Poslední čtvrtou částí je parkur, kde nerozhoduje rychlost, ale korektní najíždění překážek a cválání na správnou nohu.
+                      Zkoušku toho dne složili všichni účastníci.</p>
+                  <p class="article_news__text">Děkujeme trenérce Martině za už od jara trvající přípravu a za výpomoc s přípravou i Olině. V komisi nás hodnotili pan Václav Novotný ml., paní Danuše Balažová a 
+                      paní Alena Brixí.</p>
+                   <p class="article_news__text">Tino, speciální díky Tobě a profesoru Devronovi. Moc nám pomohl. :-)</p>
+
+                      
+
+
                  <h4 class="article_news__heading">Drezurní závody v Sobotce 31.8. 2024</h4>
-                    <p class="article_news__text">V sobotu 31.8.2024 jsme zavítali do Sobotky na drezurní závody, které pro nás byly i přípravou na ZZVJ. Na Devronovi startovala Majda s Verčou, o Saula se podělily Klárka s Johankou P. Lucka jela na Tedovi. 
+                    <p class="article_news__text">V sobotu 31.8.2024 jsme zavítali do Sobotky na drezurní závody, které pro nás byly i přípravou na ZZVJ. Na Devronovi startovala Majda s Verčou, 
+                        o Saula se podělily Klárka s Johankou P.. Lucka jela na Tedovi. 
                         Organizace byla velmi dobrá, to ostatně v Sobotce je vždycky. 
                         Úlohu děvčata odjela v rozpětí 73% - 46%, nejlepší z nás byla Lucka, která celou soutěž s přehledem vyhrála, ze 6. místa se radovala Klárka, dále se holky seřadily na 9., 11. a 12. místě. .</p>
                         
