--- a/2024.html
+++ b/2024.html
@@ -58,6 +58,11 @@
                   <p class="article_news__text">Děkujeme trenérce Martině za už od jara trvající přípravu a za výpomoc s přípravou i Olině. V komisi nás hodnotili pan Václav Novotný ml., paní Danuše Balažová a 
                       paní Alena Brixí.</p>
                    <p class="article_news__text">Tino, speciální díky Tobě a profesoru Devronovi. Moc nám pomohl. :-)</p>
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj1.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
 
                       
 
