--- a/2024.html
+++ b/2024.html
@@ -63,6 +63,36 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj2.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj3.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj4.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj5.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj6.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                <figure class="img_container__part">
+                                <img src="./akce_foto/zzvj7.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
 
                       
 
