--- a/2024.html
+++ b/2024.html
@@ -59,32 +59,32 @@
                       paní Alena Brixí.</p>
                    <p class="article_news__text">Tino, speciální díky Tobě a profesoru Devronovi. Moc nám pomohl. :-)</p>
                  <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj1.JPG"
+                                <img src="./imgs/zzvj1.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj2.JPG"
+                                <img src="./imgs/zzvj2.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj3.JPG"
+                                <img src="./imgs/zzvj3.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj4.JPG"
+                                <img src="./imgs/zzvj4.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj5.JPG"
+                                <img src="./imgs/zzvj5.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj6.JPG"
+                                <img src="./imgs/zzvj6.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
